# gList

./: .gitignore  CMakeLists.txt  Makefile
include/: generic.h  generic_list.h
source/: generic_list.c  generic_list_actions.c  generic_list_mem.c  generic_list_mid.c  generic_list_sort.c
tests/: CMakeLists.txt  test.c
tests/source/: glist_tests.c  gnode_tests.c
